@@ -1,0 +1,33 @@
+{include file="section/head.phtml"}
+<title>Magix CMS | Admin</title>
+</head>
+<body class="module-dashboard">
+{include file="section/top.phtml"}
+<div class="container-fluid">
+    <div class="row-fluid">
+    {include file="section/colleft.phtml"}
+        <div class="span9">
+            <div class="row-fluid">
+                <div class="span12">
+                    {include file="cms/section/nav.phtml"}
+                    <div class="row-fluid">
+                        <span class="span10">
+                            <h1>Edition de la page {$idpage}</h1>
+                        </span>
+                        <span class="span2">
+                            <a class="btn btn-large post-preview" href="#">
+                                <span class="icon-zoom-in"></span>
+                            </a>
+                        </span>
+                    </div>
+                    {include file="cms/forms/edit.phtml"}
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+{include file="section/footer.phtml"}
+{include file="section/js.phtml"}
+{include file="cms/section/js.phtml"}
+</body>
+</html>
