@@ -1,32 +1,0 @@
-<form id="forms_cms_add_parent" method="post" action="">
-    <p>
-        <label for="title_page">Titre :</label>
-        <input type="text" id="title_page" name="title_page" value="" size="50" />
-        {if $selectlang eq null}
-        <input type="hidden" name="idlang" id="idlang" value="{$smarty.get.getlang}" />
-        {/if}
-    </p>
-    {if $selectlang !=null}
-        {$selectlang}
-    {/if}
-    <p>
-        <label for="content_page" class="inlinelabel">Contenu :</label>
-        <textarea name="content_page" id="content_page" class="mceEditor"></textarea>
-    </p>
-	<a href="#metas" class="showit">
-        <span class="icon-plus"></span> Voir les métas
-    </a>
-    <div class="showcontent" id="metas">
-        <p>
-            <label for="seo_title_page">Title :</label>
-            <textarea class="span6" id="seo_title_page" name="seo_title_page" cols="70" rows="3"></textarea>
-        </p>
-        <p>
-            <label for="seo_desc_page">Description :</label>
-            <textarea class="span6" id="seo_desc_page" name="seo_desc_page" cols="70" rows="3"></textarea>
-        </p>
-    </div>
-	<p>
-        <input type="submit" class="btn btn-primary" value="Envoyer" />
-	</p>
-</form>
