@@ -1,0 +1,43 @@
+<form id="forms_cms_add_parent" method="post" action="">
+    <p>
+        <label for="cmslink">URL</label>
+        <input type="text" class="input-xxlarge" id="cmslink" readonly="readonly" size="50" value="" />
+    </p>
+    <p class="pull-left">
+        <label for="iso">ISO</label>
+        <input type="text" class="input-mini" id="iso" disabled="disabled" readonly="readonly" size="3" value="{$iso|upper}" />
+    </p>
+    <p class="controls-row offset1 input-append">
+        <label for="uri_page">URL Simplifié</label>
+        <input type="text" class="input-xlarge" id="uri_page" name="uri_page" readonly="readonly" size="30" value="{$uri_page}" />
+        <a class="unlocked" href="#">
+            <span class="add-on icon-lock"></span>
+        </a>
+    </p>
+    <p>
+        <label for="title_page">Titre :</label>
+        <input type="text" class="input-xlarge" id="title_page" name="title_page" value="{$title_page}" size="50" />
+    </p>
+    <p>
+        <label for="content_page" class="inlinelabel">Contenu :</label>
+        <textarea name="content_page" id="content_page" class="mceEditor">{$content_page}</textarea>
+    </p>
+    <p>
+        <a href="#metas" class="btn showit">
+            <span class="icon-plus"></span> Voir les métas
+        </a>
+    </p>
+    <div class="showcontent" id="metas">
+        <p>
+            <label for="seo_title_page">Title :</label>
+            <textarea class="span6" id="seo_title_page" name="seo_title_page" cols="70" rows="3">{$seo_title_page}</textarea>
+        </p>
+        <p>
+            <label for="seo_desc_page">Description :</label>
+            <textarea class="span6" id="seo_desc_page" name="seo_desc_page" cols="70" rows="3">{$seo_desc_page}</textarea>
+        </p>
+    </div>
+    <p>
+        <input type="submit" class="btn btn-primary" value="Envoyer" />
+    </p>
+</form>
