@@ -1,7 +1,7 @@
 {include file="section/head.phtml"}
-<title>Test</title>
+<title>Magix CMS | Admin</title>
 </head>
-<body class="module-dashboard">
+<body class="module-cms">
 {include file="section/top.phtml"}
 <div class="container-fluid">
     <div class="row-fluid">
@@ -9,7 +9,7 @@
         <div class="span9">
             <div class="row-fluid">
                 <div class="span12">
-                    <h2>Statistiques des pages</h2>
+                    <h1>Statistiques des pages</h1>
                     <div id="graph"></div>
                 </div>
             </div>
